# itmo-labs

./: .gitignore
algos/: .gitignore
algos/lab1/src/: main.kt
algos/lab2/: main.py
algos/lab3/: main.py
algos/lab4/: main.py
algos/lab5/: main.py
algos/lab6/: main.py
algos/lab8/: main.py  whale_optimixation.py
data-storage-and-processing/: final_test_task2.py  week2.ipynb
intro-ml/: .gitignore  final-task.csv  final-task.ipynb  task1.ipynb  task4-2.csv  task4-2.ipynb  task5.csv  task5.ipynb
machine-learning-technologies/: task1.ipynb  task2.ipynb  task3.ipynb  task4.ipynb  task5.ipynb
parallel-algorithms/: .gitignore
parallel-algorithms/lab1/: CMakeLists.txt  main.cpp
parallel-algorithms/lab2/: .gitignore  CMakeLists.txt  Makefile  common.h  main.c  main.cpp  mpi_main.c  mpi_main.cpp
parallel-algorithms/lab3/: CMakeLists.txt  main.cpp
parallel-algorithms/lab4/: main.cpp
